Fixing background image on each section so that it shows on mobile.

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header .navbar ul li a:hover{
 .home .home-content .block h1{
     font-size: 50px;
     font-weight: bold;
+    color: lightseagreen;
 }
 
 .home .home-content .block h3{
@@ -226,6 +227,7 @@ header .navbar ul li a:hover{
     background-size: cover;
     background-position: center;
     padding-bottom: 30px;
+    max-width: 100%;
 }
 
 .projects .section-title{
@@ -258,6 +260,7 @@ header .navbar ul li a:hover{
     display: flex;
     flex-wrap: wrap;
     border: 1px solid rgb(198, 207, 207);
+    border-radius: 5px;
 }
 
 .projects .row .projects-cards .list a{
@@ -269,6 +272,7 @@ header .navbar ul li a:hover{
     width: 500px;
     height: 200px;
     padding-top: 30px;
+    max-width: 100%;
 }
 
 #fishing{
